--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} حسابداری{% endblock %}</title>
+    <title>{% block title %} پنل کاربری {% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body dir="rtl">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">حسابداری</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Home</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
@@ -33,7 +33,7 @@
     </div>
 
     <footer class="text-center mt-4 py-3 bg-light">
-        <p>© 2025 حسابداری | تمامی حقوق محفوظ است.</p>
+        <p>تمامی حقوق محفوظ است.</p>
     </footer>
 </body>
 </html>
