add CustomUserAdmin in admin.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">خروج</a>
+                            <a class="nav-link" href="">خروج</a>
+{#                            {% url 'logout' %}#}
                         </li>
                     {% endif %}
                 </ul>
