--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,7 +13,8 @@
             {% endfor %}
             </div>
         {% endif %} 
-        <button type="submit">ورود</button>
+{#        <button type="submit">ورود</button>#}
+        <button type="submit" class="btn btn-primary">ورود</button>
     </form>
 </div>
 {% endblock %}
